fix(implementation): use correct square value

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -311,9 +311,9 @@
    },
    "outputs": [],
    "source": [
-    "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
-    "    row = piece.piece_type // 8\n",
-    "    column = piece.piece_type % 8\n",
+    "def get_piece_squared_tables_value(piece: chess.Piece, square: int, end_game: bool=False) -> int:\n",
+    "    row = square // 8\n",
+    "    column = square % 8\n",
     "    \n",
     "    if end_game and piece.piece_type == chess.KING:\n",
     "        if piece.color == chess.WHITE:\n",
@@ -354,7 +354,7 @@
     "        if not piece:\n",
     "            continue\n",
     "        piece_value += get_piece_value(piece)\n",
-    "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
+    "        piece_value += get_piece_squared_tables_value(piece, square, end_game)\n",
     "    return piece_value"
    ]
   },
