feat(implementation): if there is only one legal move return it instead of calculating it in depth

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -387,6 +387,9 @@
     "    global is_timeout\n",
     "    global start_time\n",
     "    \n",
+    "    if board.legal_moves == 1:\n",
+    "        return board.legal_moves[0]\n",
+    "    \n",
     "    is_timeout = False\n",
     "    start_time = time.time()\n",
     "    d = 0\n",
