feat(implementation): print move score for debugging

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -397,7 +397,7 @@
     "    while True:\n",
     "        if d > 1:\n",
     "            global_best_move = best_move\n",
-    "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move}\")\n",
+    "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move} (Score: {move_scores[global_best_move]})\")\n",
     "        current_depth = depth + d\n",
     "        if color == 1:\n",
     "            minimize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
