--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -312,6 +312,7 @@
    "outputs": [],
    "source": [
     "def get_piece_squared_tables_value(piece: chess.Piece, square: int, end_game: bool=False) -> int:\n",
+    "    factor = -1 if piece.color == chess.BLACK else 1\n",
     "    row = square // 8\n",
     "    column = square % 8\n",
     "    \n",
@@ -326,7 +327,7 @@
     "    else:\n",
     "        piece_squared_table = reversed_piece_squared_tables.get(piece.piece_type)\n",
     "        \n",
-    "    return piece_squared_table[row][column]"
+    "    return factor * piece_squared_table[row][column]"
    ]
   },
   {
@@ -815,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   },
   "pycharm": {
    "stem_cell": {
