--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -400,7 +400,7 @@
     "            global_best_move = best_move\n",
     "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move} (Score: {move_scores[global_best_move]})\")\n",
     "        current_depth = depth + d\n",
-    "        if color == 1:\n",
+    "        if color == chess.BLACK:\n",
     "            minimize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
     "        else:\n",
     "            maximize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
@@ -459,7 +459,7 @@
     "            \n",
     "            if score > alpha:\n",
     "                alpha = score\n",
-    "                if depth==current_depth:\n",
+    "                if depth == current_depth and color == chess.WHITE:\n",
     "                    best_move = move\n",
     "        if score >= beta:\n",
     "            break\n",
@@ -514,7 +514,7 @@
     "            \n",
     "            if score < beta:\n",
     "                beta = score\n",
-    "                if depth==current_depth:\n",
+    "                if depth == current_depth and color == chess.BLACK:\n",
     "                    best_move = move\n",
     "        if score <= alpha:\n",
     "            break\n",
@@ -783,20 +783,6 @@
    "outputs": [],
    "source": [
     "play_game()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
