feat(theory): add introduction to transposition tables

--- a/paper/content/chapter2.tex
+++ b/paper/content/chapter2.tex
@@ -6,3 +6,4 @@
 \input{content/chapter2/chapter2_3.tex}
 \input{content/chapter2/chapter2_3_1.tex}
 \input{content/chapter2/chapter2_3_2.tex}
+\input{content/chapter2/chapter2_3_3.tex}
