--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -167,6 +167,16 @@
   urldate = {2020-02-01},
 }
 
+@Online{Wiki2020,
+  author   = {Chess Programming Wiki},
+  title    = {Transposition Table},
+  year     = {2020},
+  url      = {https://www.chessprogramming.org/Transposition_Table},
+  urldate  = {2020-03-01},
+  file     = {:Wiki2020.pdf:PDF},
+  keywords = {transposition tables},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
