feat(implementation): first try of improved move ordering

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -28,6 +28,8 @@
     "import chess.polyglot\n",
     "import chess.svg\n",
     "\n",
+    "from collections import defaultdict\n",
+    "\n",
     "from IPython.display import display, HTML, clear_output"
    ]
   },
@@ -91,7 +93,8 @@
     "current_depth = 0\n",
     "global_best_move = None\n",
     "is_timeout: bool = False\n",
-    "move_scores = {}\n",
+    "move_scores = defaultdict(dict)\n",
+    "neighbor_boards = defaultdict(list)\n",
     "start_time: float = 0.0"
    ]
   },
@@ -442,11 +445,12 @@
     "    global current_depth\n",
     "    global global_best_move\n",
     "    global is_timeout\n",
+    "    global neighbor_boards\n",
     "    global start_time\n",
-    "    \n",
+    "\n",
     "    if board.legal_moves == 1:\n",
     "        return board.legal_moves[0]\n",
-    "    \n",
+    "\n",
     "    is_timeout = False\n",
     "    start_time = time.time()\n",
     "    d = 0\n",
@@ -454,7 +458,9 @@
     "    while True:\n",
     "        if d > 1:\n",
     "            global_best_move = best_move\n",
-    "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move} (Score: {move_scores[global_best_move]})\")\n",
+    "            print(\n",
+    "                f\"Completed search with depth {current_depth}. Best move so far: {global_best_move} (Score: {move_scores[board.fen()][global_best_move]})\"\n",
+    "            )\n",
     "        current_depth = depth + d\n",
     "        if color == chess.BLACK:\n",
     "            minimize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
@@ -462,6 +468,19 @@
     "            maximize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
     "        d += 1\n",
     "        if is_timeout:\n",
+    "            del move_scores[board.fen()]\n",
+    "            newboard = board.copy()\n",
+    "            newboard.push(global_best_move)\n",
+    "            for neighbor_board in neighbor_boards[1]:\n",
+    "                if neighbor_board != newboard.fen():\n",
+    "                    try:\n",
+    "                        del move_scores[neighbor_board]\n",
+    "                    except KeyError:\n",
+    "                        pass\n",
+    "            neighbor_boards = defaultdict(\n",
+    "                list,\n",
+    "                {key - 1: value for key, value in neighbor_boards.items() if key != 1},\n",
+    "            )\n",
     "            return global_best_move"
    ]
   },
@@ -512,28 +531,34 @@
     "    global best_move\n",
     "    global global_best_move\n",
     "    global is_timeout\n",
+    "    global neighbor_boards\n",
     "    global start_time\n",
-    "    \n",
+    "\n",
     "    if time.time() - start_time > TIMEOUT_SECONDS:\n",
     "        is_timeout = True\n",
     "        return alpha\n",
     "\n",
     "    if depth < 1:\n",
     "        return simple_eval_heuristic(board)\n",
-    "    \n",
+    "\n",
     "    score = alpha\n",
-    "    moves = sorted(board.legal_moves, key=lambda move: -move_scores.get(move, 0))\n",
+    "\n",
+    "    board_scores = move_scores.get(board.fen(), dict())\n",
+    "    moves = sorted(\n",
+    "        board.legal_moves, key=lambda move: -board_scores.get(move, -sys.maxsize),\n",
+    "    )\n",
     "\n",
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
     "        move_score = minimize(newboard, depth - 1, alpha, beta, color)\n",
-    "        move_scores[move] = move_score\n",
+    "        move_scores[board.fen()][move] = move_score\n",
+    "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
     "\n",
     "        if move_score > score:\n",
     "            score = move_score\n",
-    "            \n",
+    "\n",
     "            if score > alpha:\n",
     "                alpha = score\n",
     "                if depth == current_depth and color == chess.WHITE:\n",
@@ -576,28 +601,34 @@
     "    global best_move\n",
     "    global global_best_move\n",
     "    global is_timeout\n",
+    "    global neighbor_boards\n",
     "    global start_time\n",
-    "    \n",
+    "\n",
     "    if time.time() - start_time > TIMEOUT_SECONDS:\n",
     "        is_timeout = True\n",
     "        return beta\n",
-    "    \n",
+    "\n",
     "    if depth < 1:\n",
     "        return simple_eval_heuristic(board)\n",
-    "    \n",
+    "\n",
     "    score = beta\n",
-    "    moves = sorted(board.legal_moves, key=lambda move: move_scores.get(move, 0))\n",
+    "\n",
+    "    board_scores = move_scores.get(board.fen(), dict())\n",
+    "    moves = sorted(\n",
+    "        board.legal_moves, key=lambda move: board_scores.get(move, sys.maxsize),\n",
+    "    )\n",
     "\n",
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
     "        move_score = maximize(newboard, depth - 1, alpha, beta, color)\n",
-    "        move_scores[move] = move_score\n",
+    "        move_scores[board.fen()][move] = move_score\n",
+    "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
     "\n",
     "        if move_score < score:\n",
     "            score = move_score\n",
-    "            \n",
+    "\n",
     "            if score < beta:\n",
     "                beta = score\n",
     "                if depth == current_depth and color == chess.BLACK:\n",
@@ -680,8 +711,8 @@
     "    if move:\n",
     "        return move\n",
     "    else:\n",
-    "        global move_scores\n",
-    "        move_scores = {}\n",
+    "        print(len(move_scores))\n",
+    "        print(len(neighbor_boards))\n",
     "        return iterative_deepening(board, 0, color)"
    ]
   },
