feat(implementation): update description to meet new implementation

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Zuerst werden alle notwendigen Pakete und Module importiert.\n",
-    "Dabei wird neben den Modulen der Standardbibliothek (`random`, `sys` und `time`) noch das Paket *Python-Chess* (`chess`) benötigt, welches bereits installiert wurde.\n",
+    "Dabei wird neben den Modulen der Standardbibliothek (`random`, `sys` und `time`) und des `defaultdict` aus dem `collections` Modul noch das Paket *Python-Chess* (`chess`) benötigt, welches bereits installiert wurde.\n",
     "Zudem werden für die Anzeige einige Funktionen aus IPython benötigt, die durch die Installation und Verwendung von Jupyter Notebooks bereitgestellt werden."
    ]
   },
@@ -75,6 +75,11 @@
     "- `current_depth` speichert die aktuelle Tiefe für das Iterative Deepening.\n",
     "- `is_timeout` ist genau dann wahr, wenn die Zeit des Schachcomputers abgelaufen ist.\n",
     "- Bei `move_scores` handelt es sich um ein Dictionary, dass den Score für jeden bereits besuchten Zug im Iterative Deepening Verfahren speichert.\n",
+    "Dabei handelt es sich speziell um ein verschachteltes Dictionary.\n",
+    "Die Schlüssel auf der obersten Ebene bilden die Stellungen in FEN Notation.\n",
+    "Der dazugehörige Wert ist wiederum ein Dictionary mit den Zügen als Schlüssel und dem dazugehörigen Score als Wert.\n",
+    "- `neighbor_boards` ist ein Dictionary, dass alle Stellungen enthält, die in einem Halbzug von der aktuellen Stellung aus erreicht werden können und die evaluiert wurden.\n",
+    "Es dient dazu, das Dictionary `move_scores` zu beschneiden.\n",
     "- In der Variablen `start_time` wird die Startzeit des Zuges des Schachcomputers abgelegt."
    ]
   },
@@ -426,7 +431,18 @@
     "Sowohl `alpha` als auch `beta` werden mit einem sehr hohen bzw. sehr niedrigen Zahlenwert initialisiert.\n",
     "Bei jedem Schleifendurchlauf wird dabei dem globale besten Zug (`global_best_move`) der Zug aus der Variablen `best_move` zugewiesen.\n",
     "Des Weiteren wird überprüft, ob die Zeit des Schachcomputers abgelaufen ist.\n",
-    "Ist dies der Fall, wird der globale beste Zug zurückgegeben."
+    "Ist dies der Fall, wird der globale beste Zug zurückgegeben.\n",
+    "\n",
+    "Um das starke Anwachsen des `move_scores` Dictionary zu verhindert, wird dieses am Ende des Zuges des Schachcomputers beschnitten.\n",
+    "Zum weiteren Verständnis dient folgende Grafik.\n",
+    "\n",
+    "![neighbor-boards](neighbor-boards.png)\n",
+    "\n",
+    "Die einzelnen Knoten des Graphen repräsentieren die möglichen Stellungen, wobei der Knoten 0 die aktuelle Stellung darstellt.\n",
+    "Entscheidet sich der Spieler für den linken Pfad (zum Knoten 1.1), so werden die Stellungen zu den Knoten 0 und 1.2 gelöscht.\n",
+    "Entscheidet sich im darauffolgenden Zug der aktuelle Spieler für den rechten Pfad (zum Knoten 2.1.2), so wird der Elternknoten 1.1 sowie alle Knoten auf der selben Ebene (2.1.1, 2.2.1 und 2.2.2) gelöscht.\n",
+    "Auf diese Weise wird das starke Anwachsen des `move_scores` Dictionary eingeschränkt.\n",
+    "Bei dieser Lösung handelt es sich um eine recht einfache Lösungen, die zwar optimiert werden kann, jedoch nicht weiter verfolgt wird."
    ]
   },
   {
@@ -506,14 +522,17 @@
     "Ist die Zeit noch nicht abgelaufen wird des Weiteren überprüft, ob es sich bei der aktuellen Suchtiefe um eine Tiefe kleiner als 1 handelt.\n",
     "Ist dies der Fall, wird die aktuelle Stellung mittels der Bewertungsheuristik evaluiert und der entsprechende Wert zurückgeliefert.\n",
     "Anschließend werden alle zulässigen Züge nach ihren Scores sortiert, sodass aussichtsreichere Züge zuerst evaluiert werden.\n",
-    "Ist kein Score für einen zulässigen Zug vorhanden, so wird diesem 0 zugewiesen.\n",
+    "Ist kein Score für einen zulässigen Zug vorhanden, so wird diesem der für den Spieler schlechteste Score (`-sys.maxsize`) zugewiesen.\n",
     "Anschließend wird über alle zulässigen Züge iteriert und die Funktion `minimize` nach der Ausführung des Zuges des aktuellen Schleifendurchlaufs aufgerufen.\n",
     "Die Variablen `score` und `alpha` werden basierend auf dem Wert von `move_score` aktualisiert, wie dies im Pseudocode aus dem Theorieteil der Fall ist.\n",
     "Zusätzlich wird `best_move` der aktuelle Zug zugewiesen, wenn folgende drei Bedingungen erfüllt sind:\n",
     "\n",
     "1. Der aktuelle Score ist größer als Alpha, wodurch die Variable `alpha` aktualisiert wird und ein möglicher neuer bester Zug gefunden wurde.\n",
     "1. Die aktuelle Suchtiefe entspricht der Suchtiefe, mit der die Funktion `iterative_deepening` die aktuelle Iteration anstieß.\n",
-    "1. Beim Spieler, der derzeit am Zug ist, handelt es sich um den Weißen bzw. maximierenden Spieler."
+    "1. Beim Spieler, der derzeit am Zug ist, handelt es sich um den Weißen bzw. maximierenden Spieler.\n",
+    "\n",
+    "Während des Schleifendurchlaufs wird der `move_score` für einen Zug im Dictionary `move_scores` abgelegt.\n",
+    "Dabei wird er der Stellung zugewiesen, die als Ausgangsstellung für den Zug dient."
    ]
   },
   {
@@ -581,6 +600,7 @@
     "\n",
     "- Die Liste der zulässigen Züge ist aufwärts und nicht abwärts sortiert.\n",
     "Somit fängt der Schachcomputer mit dem Zug an, der den geringsten Score besitzt.\n",
+    "Zudem ist der für den Spieler schlechteste Zug nun `sys.maxsize`.\n",
     "- Es wird die Variable `beta` aktualisiert und nicht die Variable `alpha`.\n",
     "Diese wird zudem aktualisiert, wenn der aktuelle `score` niedriger und somit besser ist.\n",
     "- Eine der Bedingungen für die Aktualisierung des `best_move` ändert sich: So wird nun die Variable nur gesetzt, wenn der Schwarze bzw. minimierende Spieler am Zug ist."
