feat(paper): introduction

--- a/paper/content/chapter1.tex
+++ b/paper/content/chapter1.tex
@@ -1,3 +1,19 @@
 % !TeX root = ../paper.tex
 \section{Einleitung}
 
+\glqq Es lässt sich nicht mit Gewissheit belegen, wo und wann die Menschen zum ersten Mal Schach gespielt haben.
+Die meisten Quellen deuten darauf hin, dass das heute beliebteste Strategiespiel der Welt im 6. Jahrhundert in Indien populär wurde, über Persien in die arabischen Länder gelangte und von dort aus seinen Siegeszug um die ganze Welt angetreten hat.\grqq [\cite{Gifhorn}]
+
+Diese ursprünglichen Formen des Schachs waren dem heutigen Spiel sehr fern.
+Im 13. Jahrhundert wurden die Spielregeln angepasst, um das Spiel dynamischer und schneller zu machen.
+Mit der im 16. Jahrhundert hinzugekommenen Rochade umfasste das Schachspiel die Regeln, die es bis heute mit einigen Ausnahmen hat [\cite{Gifhorn}].
+Auch heute noch ist Schach ein sehr beliebtes Spiel [\cite{Kreuzberg}], für das mittlerweile auch viele Online Varianten existieren.
+Dabei kann man gegen reale Gegner oder gegen Schachcomputer spielen.
+Im Rahmen des Studiums und vor dem Hintergrund verschiedener Vorlesungen mit dem Bezug zur künstlichen Intelligenz wird im Zuge dieser Studienarbeit ein Schachcomputer entwickelt.
+
+Hierzu werden zuerst einige theoretische Grundlagen, die für die Erstellung des Schachcomputers notwendig sind, erläutert.
+Dies umfasst die Erarbeitung des Mini-Max-Algorithmus, die verwendete Bewertungsheuristik sowie die Alpha-Beta-Suche.
+Ferner werden bei der Alpha-Beta-Suche die Vorsortierung, die Ruhesuche und Transpositionstabellen als Verbesserungen eingeführt.
+Es folgt die Implementierung des Schachcomputers, die in einem \textit{Jupyter Notebook} erfolgt.
+Für die Visualisierung und den Spielablauf wird zudem die Python Bibliothek \textit{Python-Chess} verwendet.
+Es folgt eine Auswertung der Implementierung und eine Diskussion über vernachlässigte Aspekte in dieser Arbeit.
