--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -167,6 +167,21 @@
   urldate = {2020-02-01},
 }
 
+@Online{Gifhorn,
+  author   = {Schachverein~Gifhorn},
+  title    = {Wie das Schachspiel erfunden wurde},
+  url      = {https://schachverein-gifhorn.jimdofree.com/vereinsinfos/schach-geschichte/},
+  urldate  = {2020-04-09},
+  keywords = {introduction, history},
+}
+
+@Online{Kreuzberg,
+  author  = {Schach-Club~Kreuzberg},
+  title   = {Schach: Immer noch beliebt},
+  url     = {http://sparkassen-jugend-open.de/schach-immer-noch-beliebt/},
+  urldate = {2020-04-09},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
