fix(implementation): adjust maximize and minimize alpha-beta constraints

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -578,12 +578,12 @@
     "        if move_score > score:\n",
     "            score = move_score\n",
     "\n",
-    "            if score > alpha:\n",
+    "            if score >= alpha:\n",
     "                alpha = score\n",
     "                if depth == current_depth and color == chess.WHITE:\n",
     "                    best_move = move\n",
-    "        if score >= beta:\n",
-    "            break\n",
+    "        if alpha >= beta:\n",
+    "            return alpha\n",
     "    return score"
    ]
   },
@@ -649,12 +649,12 @@
     "        if move_score < score:\n",
     "            score = move_score\n",
     "\n",
-    "            if score < beta:\n",
+    "            if score <= beta:\n",
     "                beta = score\n",
     "                if depth == current_depth and color == chess.BLACK:\n",
     "                    best_move = move\n",
-    "        if score <= alpha:\n",
-    "            break\n",
+    "        if beta <= alpha:\n",
+    "            return beta\n",
     "    return score"
    ]
   },
