fix(implementation): reset move_scores and neighbor_boards if move from opening data base is used

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -726,9 +726,13 @@
    "outputs": [],
    "source": [
     "def ai_player(board: chess.Board, color: int):\n",
-    "    move = get_opening_data_base_moves(board)\n",
+    "    global move_scores\n",
+    "    global neighbor_boards\n",
     "    \n",
+    "    move = get_opening_data_base_moves(board)\n",
     "    if move:\n",
+    "        move_scores = defaultdict(dict)\n",
+    "        neighbor_boards = defaultdict(list)\n",
     "        return move\n",
     "    else:\n",
     "        print(len(move_scores))\n",
