feat(implementation): implement quiescence search

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -56,6 +56,7 @@
    },
    "outputs": [],
    "source": [
+    "QUESCENCE_SEARCH_DEPTH: int = 6\n",
     "TIMEOUT_SECONDS: int = 30"
    ]
   },
@@ -558,7 +559,7 @@
     "        return alpha\n",
     "\n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board)\n",
+    "        return quiescence_search_maximize(board, depth + 1, alpha, beta)\n",
     "\n",
     "    score = alpha\n",
     "\n",
@@ -629,7 +630,7 @@
     "        return beta\n",
     "\n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board)\n",
+    "        return quiescence_search_minimize(board, depth + 1, alpha, beta)\n",
     "\n",
     "    score = beta\n",
     "\n",
@@ -656,6 +657,92 @@
     "        if beta <= alpha:\n",
     "            return beta\n",
     "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiescence_search_maximize(board: chess.Board, depth: int, alpha: int, beta: int):\n",
+    "    global best_move\n",
+    "    global global_best_move\n",
+    "    \n",
+    "    if depth == QUESCENCE_SEARCH_DEPTH:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "    \n",
+    "    moves = generate_aggressive_moves(board)\n",
+    "    if moves == []:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "    \n",
+    "    score = alpha\n",
+    "    for move in moves:\n",
+    "        newboard = board.copy()\n",
+    "        newboard.push(move)\n",
+    "        move_score = quiescence_search_minimize(newboard, depth + 1, alpha, beta)\n",
+    "        move_scores[move] = move_score\n",
+    "        newboard.pop()\n",
+    "\n",
+    "        if move_score > score:\n",
+    "            score = move_score\n",
+    "\n",
+    "            if score >= alpha:\n",
+    "                alpha = score\n",
+    "        if alpha >= beta:\n",
+    "            return alpha\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiescence_search_minimize(board: chess.Board, depth: int, alpha: int, beta: int):\n",
+    "    global best_move\n",
+    "    global global_best_move\n",
+    "    \n",
+    "    if depth == QUESCENCE_SEARCH_DEPTH:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "    \n",
+    "    moves = generate_aggressive_moves(board)\n",
+    "    if moves == []:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "    \n",
+    "    score = beta\n",
+    "    for move in moves:\n",
+    "        newboard = board.copy()\n",
+    "        newboard.push(move)\n",
+    "        move_score = quiescence_search_maximize(newboard, depth + 1, alpha, beta)\n",
+    "        move_scores[move] = move_score\n",
+    "        newboard.pop()\n",
+    "        \n",
+    "        if move_score < score:\n",
+    "            score = move_score\n",
+    "\n",
+    "            if score <= beta:\n",
+    "                beta = score\n",
+    "        if beta <= alpha:\n",
+    "            return beta\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_aggressive_moves(board: chess.Board):\n",
+    "    possible_moves = board.legal_moves\n",
+    "    aggressive_moves = []\n",
+    "    newboard = board.copy()\n",
+    "    for move in possible_moves:\n",
+    "        if newboard.is_capture(move):\n",
+    "            aggressive_moves.append(move)\n",
+    "    return aggressive_moves"
    ]
   },
   {
