feat(implementation): implement basic transpositional tables

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -29,8 +29,50 @@
     "import chess.svg\n",
     "\n",
     "from collections import defaultdict\n",
+    "from collections import OrderedDict\n",
     "\n",
     "from IPython.display import display, HTML, clear_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The normal OrderedDict doesn't update the position of a key in the list,\n",
+    "# when the value is changed.\n",
+    "class LRUCache:\n",
+    "    \"\"\"Store items in the order the keys were last added\"\"\"\n",
+    "\n",
+    "    def __init__(self, size):\n",
+    "        self.od = OrderedDict()\n",
+    "        self.size = size\n",
+    "\n",
+    "    def get(self, key, default=None):\n",
+    "        try:\n",
+    "            self.od.move_to_end(key)\n",
+    "        except KeyError:\n",
+    "            return default\n",
+    "        return self.od[key]\n",
+    "    \n",
+    "    def __contains__(self, item):\n",
+    "        return item in self.od\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.od)\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        self.od.move_to_end(key)\n",
+    "        return self.od[key]\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        try:\n",
+    "            del self.od[key]\n",
+    "        except KeyError:\n",
+    "            if len(self.od) == self.size:\n",
+    "                self.od.popitem(last=False)\n",
+    "        self.od[key] = value"
    ]
   },
   {
@@ -41,8 +83,10 @@
     }
    },
    "source": [
-    "Als nächstes wird eine globale Konstante `TIMEOUT_SECONDS` definiert.\n",
-    "Diese wird verwendet, um die Zeit des Schachcomputers zur Berechnung seines nächsten Zuges festzulegen."
+    "Als nächstes werden globale Konstanten definiert.\n",
+    "\n",
+    "- `TABLE_SIZE` is die maximale größe der Transpositionstabellen.\n",
+    "- `TIMEOUT_SECONDS` wird verwendet, um die Zeit des Schachcomputers zur Berechnung seines nächsten Zuges festzulegen."
    ]
   },
   {
@@ -57,6 +101,7 @@
    "outputs": [],
    "source": [
     "QUESCENCE_SEARCH_DEPTH: int = 6\n",
+    "TABLE_SIZE = 1e8\n",
     "TIMEOUT_SECONDS: int = 30"
    ]
   },
@@ -101,7 +146,8 @@
     "is_timeout: bool = False\n",
     "move_scores = defaultdict(dict)\n",
     "neighbor_boards = defaultdict(list)\n",
-    "start_time: float = 0.0"
+    "start_time: float = 0.0\n",
+    "transposition_table: LRUCache = LRUCache(TABLE_SIZE)"
    ]
   },
   {
@@ -502,6 +548,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score(board: chess.Board, depth: int, alpha: int, beta: int, color: int, minimax):\n",
+    "    global transposition_table\n",
+    "    \n",
+    "    if (board.fen(), depth) in transposition_table:\n",
+    "        score, a, b = transposition_table[(board.fen(), depth)]\n",
+    "        if a <= alpha and beta <= b:\n",
+    "            return score\n",
+    "        else:\n",
+    "            alp = min(alpha, a)\n",
+    "            bet = max(beta , b)\n",
+    "            score = minimax(board, depth, alp, bet, color)\n",
+    "            transposition_table[(board.fen(), depth)] = score, alp, bet\n",
+    "            return score\n",
+    "    else:\n",
+    "        score = minimax(board, depth, alpha, beta, color)\n",
+    "        transposition_table[(board.fen(), depth)] = score, alpha, beta\n",
+    "        return score"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -571,7 +642,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = minimize(newboard, depth - 1, alpha, beta, color)\n",
+    "        move_score = get_score(newboard, depth - 1, alpha, beta, color, minimize)\n",
     "        move_scores[board.fen()][move] = move_score\n",
     "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
@@ -642,7 +713,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = maximize(newboard, depth - 1, alpha, beta, color)\n",
+    "        move_score = get_score(newboard, depth - 1, alpha, beta, color, maximize)\n",
     "        move_scores[board.fen()][move] = move_score\n",
     "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
