feat: remove color from minimize and maximize

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -526,9 +526,9 @@
     "            )\n",
     "        current_depth = depth + d\n",
     "        if color == chess.BLACK:\n",
-    "            minimize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
+    "            minimize(board, current_depth, -sys.maxsize, sys.maxsize)\n",
     "        else:\n",
-    "            maximize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
+    "            maximize(board, current_depth, -sys.maxsize, sys.maxsize)\n",
     "        d += 1\n",
     "        if is_timeout:\n",
     "            del move_scores[board.fen()]\n",
@@ -553,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_score(board: chess.Board, depth: int, alpha: int, beta: int, color: int, minimax):\n",
+    "def get_score(board: chess.Board, depth: int, alpha: int, beta: int, minimax):\n",
     "    global transposition_table\n",
     "    \n",
     "    if (board.fen(), depth) in transposition_table:\n",
@@ -563,11 +563,11 @@
     "        else:\n",
     "            alp = min(alpha, a)\n",
     "            bet = max(beta , b)\n",
-    "            score = minimax(board, depth, alp, bet, color)\n",
+    "            score = minimax(board, depth, alp, bet)\n",
     "            transposition_table[(board.fen(), depth)] = score, alp, bet\n",
     "            return score\n",
     "    else:\n",
-    "        score = minimax(board, depth, alpha, beta, color)\n",
+    "        score = minimax(board, depth, alpha, beta)\n",
     "        transposition_table[(board.fen(), depth)] = score, alpha, beta\n",
     "        return score"
    ]
@@ -618,7 +618,7 @@
    },
    "outputs": [],
    "source": [
-    "def maximize(board: chess.Board, depth: int, alpha: int, beta: int, color: int) -> int:\n",
+    "def maximize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
     "    global best_move\n",
     "    global global_best_move\n",
     "    global is_timeout\n",
@@ -642,7 +642,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = get_score(newboard, depth - 1, alpha, beta, color, minimize)\n",
+    "        move_score = get_score(newboard, depth - 1, alpha, beta, minimize)\n",
     "        move_scores[board.fen()][move] = move_score\n",
     "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
@@ -652,7 +652,7 @@
     "\n",
     "            if score >= alpha:\n",
     "                alpha = score\n",
-    "                if depth == current_depth and color == chess.WHITE:\n",
+    "                if depth == current_depth:\n",
     "                    best_move = move\n",
     "                if alpha >= beta:\n",
     "                    return alpha\n",
@@ -689,7 +689,7 @@
    },
    "outputs": [],
    "source": [
-    "def minimize(board: chess.Board, depth: int, alpha: int, beta: int, color: int) -> int:\n",
+    "def minimize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
     "    global best_move\n",
     "    global global_best_move\n",
     "    global is_timeout\n",
@@ -713,7 +713,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = get_score(newboard, depth - 1, alpha, beta, color, maximize)\n",
+    "        move_score = get_score(newboard, depth - 1, alpha, beta, maximize)\n",
     "        move_scores[board.fen()][move] = move_score\n",
     "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
     "        newboard.pop()\n",
@@ -723,7 +723,7 @@
     "\n",
     "            if score <= beta:\n",
     "                beta = score\n",
-    "                if depth == current_depth and color == chess.BLACK:\n",
+    "                if depth == current_depth:\n",
     "                    best_move = move\n",
     "                if beta <= alpha:\n",
     "                    return beta\n",
