feat(theory): finish theory about transpo tables

--- a/paper/content/acronyms.tex
+++ b/paper/content/acronyms.tex
@@ -2,9 +2,11 @@
 \newpage \section*{Abkürzungsverzeichnis} \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
 \begin{acronym}
 	\acro{B}{Bauer}
+	\acro{D}{Dame}
+	\acro{FEN}{Forsyth-Edwards Notation}
 	\acro{K}{König}
 	\acro{L}{Läufer}
-	\acro{D}{Dame}
+	\acro{LRU}{Least-Recently-Used}
 	\acro{PyPI}{Python Package Index}
 	\acro{S}{Springer}
 	\acro{T}{Turm}
