--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -177,6 +177,15 @@
   keywords = {transposition tables},
 }
 
+@Online{Edwards,
+  author   = {Steven J. Edwards},
+  title    = {Standard: Portable Game Notation Specification and Implementation Guide},
+  url      = {http://www.saremba.de/chessgml/standards/pgn/pgn-complete.htm#c16.1},
+  urldate  = {2020-04-21},
+  file     = {:Edwards.pdf:PDF},
+  keywords = {transpositional tables},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
