feat: remove redundant board.copy()

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -640,12 +640,11 @@
     "    )\n",
     "\n",
     "    for move in moves:\n",
-    "        newboard = board.copy()\n",
-    "        newboard.push(move)\n",
-    "        move_score = get_score(newboard, depth - 1, alpha, beta, minimize)\n",
+    "        board.push(move)\n",
+    "        move_score = get_score(board, depth - 1, alpha, beta, minimize)\n",
+    "        neighbor_boards[current_depth - depth + 1].append(board.fen())\n",
+    "        board.pop()\n",
     "        move_scores[board.fen()][move] = move_score\n",
-    "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
-    "        newboard.pop()\n",
     "\n",
     "        if move_score > score:\n",
     "            score = move_score\n",
@@ -711,12 +710,11 @@
     "    )\n",
     "\n",
     "    for move in moves:\n",
-    "        newboard = board.copy()\n",
-    "        newboard.push(move)\n",
-    "        move_score = get_score(newboard, depth - 1, alpha, beta, maximize)\n",
+    "        board.push(move)\n",
+    "        move_score = get_score(board, depth - 1, alpha, beta, maximize)\n",
+    "        neighbor_boards[current_depth - depth + 1].append(board.fen())\n",
+    "        board.pop()\n",
     "        move_scores[board.fen()][move] = move_score\n",
-    "        neighbor_boards[current_depth - depth + 1].append(newboard.fen())\n",
-    "        newboard.pop()\n",
     "\n",
     "        if move_score < score:\n",
     "            score = move_score\n",
@@ -749,11 +747,9 @@
     "    \n",
     "    score = alpha\n",
     "    for move in moves:\n",
-    "        newboard = board.copy()\n",
-    "        newboard.push(move)\n",
-    "        move_score = quiescence_search_minimize(newboard, depth + 1, alpha, beta)\n",
-    "        move_scores[move] = move_score\n",
-    "        newboard.pop()\n",
+    "        board.push(move)\n",
+    "        move_score = quiescence_search_minimize(board, depth + 1, alpha, beta)\n",
+    "        board.pop()\n",
     "\n",
     "        if move_score > score:\n",
     "            score = move_score\n",
@@ -784,11 +780,9 @@
     "    \n",
     "    score = beta\n",
     "    for move in moves:\n",
-    "        newboard = board.copy()\n",
-    "        newboard.push(move)\n",
-    "        move_score = quiescence_search_maximize(newboard, depth + 1, alpha, beta)\n",
-    "        move_scores[move] = move_score\n",
-    "        newboard.pop()\n",
+    "        board.push(move)\n",
+    "        move_score = quiescence_search_maximize(board, depth + 1, alpha, beta)\n",
+    "        board.pop()\n",
     "        \n",
     "        if move_score < score:\n",
     "            score = move_score\n",
@@ -809,9 +803,8 @@
     "def generate_aggressive_moves(board: chess.Board):\n",
     "    possible_moves = board.legal_moves\n",
     "    aggressive_moves = []\n",
-    "    newboard = board.copy()\n",
     "    for move in possible_moves:\n",
-    "        if newboard.is_capture(move):\n",
+    "        if board.is_capture(move):\n",
     "            aggressive_moves.append(move)\n",
     "    return aggressive_moves"
    ]
